--- a/src/main/webapp/Views/ProviderView.xhtml
+++ b/src/main/webapp/Views/ProviderView.xhtml
@@ -36,6 +36,26 @@
 						<p:column headerText="Npi Number">
 							#{provider.npiNum}
 						</p:column>
+						
+						<p:column headerText="Entity">
+							#{provider.centity.name}
+						</p:column>
+						
+						<p:column headerText="Practices">
+							
+							<p:selectCheckboxMenu value="#{provider.practiceList}" label="Select Practices"
+					            filter="true" filterMatchMode="startsWith" style="width:177px" panelStyle="width:250px">
+					            
+					            <f:selectItems value="#{provider.practiceList}" var="practice"
+									itemLabel="#{practice.name}" itemValue="#{practice}"  />
+	
+								<p:column>
+									<h:outputText value="#{t.name}" />
+								</p:column>
+					            
+					        </p:selectCheckboxMenu>
+							
+						</p:column>
 
 						
 						<p:column headerText="Edit" width="80">
@@ -85,7 +105,8 @@
 						
 						
 						<p:selectCheckboxMenu id="myPractices" value="#{providerController.provider.practiceList}" label="Select Practices"
-				            filter="true" filterMatchMode="startsWith" style="width:177px" panelStyle="width:250px">
+				            filter="true" filterMatchMode="startsWith" style="width:177px" 
+				            converter="practiseConverter" panelStyle="width:250px">
 				            
 				            <f:selectItems value="#{providerController.practiceList}" var="practice"
 								itemLabel="#{practice.name}" itemValue="#{practice}"  />
@@ -98,7 +119,8 @@
 						
 						
 					  <p:selectCheckboxMenu value="#{providerController.provider.payerList}" label="Select Payers"
-				            filter="true" filterMatchMode="startsWith" style="width:177px" panelStyle="width:250px">
+				            filter="true" filterMatchMode="startsWith" style="width:177px" 
+				            converter="payerConverter" panelStyle="width:250px">
 				            
 				            <f:selectItems value="#{providerController.payerList}" var="payer"
 								itemLabel="#{payer.name}" itemValue="#{payer}"  />
