--- a/src/main/webapp/Views/ProviderView.xhtml
+++ b/src/main/webapp/Views/ProviderView.xhtml
@@ -15,7 +15,7 @@
         </ui:define>
 
 			<ui:define name="mainContent">
-				<h2>Payer Details</h2>
+				<h2>Provider Details</h2>
 				
 				<h:form>
 					<p:commandButton value="Create" update=":myForm"
@@ -43,17 +43,18 @@
 						
 						<p:column headerText="Practices">
 							
-							<p:selectCheckboxMenu value="#{provider.practiceList}" label="Select Practices"
-					            filter="true" filterMatchMode="startsWith" style="width:177px" panelStyle="width:250px">
-					            
-					            <f:selectItems value="#{provider.practiceList}" var="practice"
-									itemLabel="#{practice.name}" itemValue="#{practice}"  />
-	
+					        <p:selectOneMenu id="advanced"
+								 panelStyle="width:180px"
+								effect="fade" var="t" style="width:160px" filter="true"
+								filterMatchMode="startsWith">
+								<f:selectItems value="#{provider.practiceList}" var="practise"
+									itemLabel="#{practise.name}" itemValue="#{practise}" />
+
 								<p:column>
 									<h:outputText value="#{t.name}" />
 								</p:column>
-					            
-					        </p:selectCheckboxMenu>
+								
+							</p:selectOneMenu>
 							
 						</p:column>
 
