--- a/src/main/webapp/Views/Template/top.xhtml
+++ b/src/main/webapp/Views/Template/top.xhtml
@@ -50,6 +50,10 @@
 				<p:submenu label="Provider">
 					<p:menuitem value="View" action="#{providerController.view()}" />
 				</p:submenu>
+				
+				<p:submenu label="Transaction">
+					<p:menuitem value="View" action="#{transactionController.view()}" />
+				</p:submenu>
 
 				<f:facet name="options">
 					<!-- <p:inputText style="margin-right:10px" placeholder="Search"/> -->
