--- a/src/main/webapp/Views/Secured/Transaction/ViewTransaction.xhtml
+++ b/src/main/webapp/Views/Secured/Transaction/ViewTransaction.xhtml
@@ -17,10 +17,12 @@
 			<ui:define name="mainContent">
 				<h2>Transaction Details</h2>
 				
-				<h:form>
+				<h:form rendered="#{sharedData.currentUser.role.canPayerTransactionAdd}">
 					<p:commandButton value="Create" update=":myForm"
 						action="#{transactionController.clearData()}"
-								oncomplete="PF('Dlg1').show();" />
+								oncomplete="PF('Dlg1').show();"
+								
+								 />
 								
 					<br/>
 				</h:form>
@@ -49,7 +51,10 @@
 							#{transaction.comments}
 						</p:column>
 						
-						<p:column headerText="Edit" width="80">
+						<p:column headerText="Edit"
+						 width="80"
+						 rendered="#{sharedData.currentUser.role.canPayerTransactionEdit}"
+						 >
 							<p:commandButton icon="ui-icon-pencil" update=":myForm"
 								oncomplete="PF('Dlg1').show();" 
 								 action="#{transactionController.updateClicked(transaction)}" />
