--- a/src/main/webapp/Views/Template/top.xhtml
+++ b/src/main/webapp/Views/Template/top.xhtml
@@ -34,7 +34,8 @@
 
 				
 					<p:menuitem value="User" icon="ui-icon-user-1"
-							action="#{userController.showUserMainView()}" />
+							action="#{userController.showUserMainView()}"
+							 />
 
 					<p:menuitem value="Practise" icon="ui-icon-gear"
 						action="#{practiseController.viewPractise()}" />
