--- a/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
+++ b/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
@@ -46,8 +46,7 @@
 							
 					        <p:selectOneMenu id="advanced"
 								 panelStyle="width:180px"
-								effect="fade" var="t" style="width:160px" filter="true"
-								filterMatchMode="startsWith">
+								effect="fade" var="t" style="width:160px">
 								<f:selectItems value="#{provider.practiceList}" var="practise"
 									itemLabel="#{practise.name}" itemValue="#{practise}" />
 
