--- a/src/main/webapp/Views/Secured/Payer/PayerView.xhtml
+++ b/src/main/webapp/Views/Secured/Payer/PayerView.xhtml
@@ -96,29 +96,24 @@
 			            
 			            <p:inputText value="#{payerController.payer.state}" placeholder="State" required="true" />
 			            <p:inputText value="#{payerController.payer.zip}" placeholder="Zip Code" required="true" />
-			            
-			            
-			            <p:selectOneMenu value="#{payerController.payer.par}" style="width:175px">
+			        
+			        </h:panelGrid>   
+			        
+			        <h:panelGrid columns="2" cellpadding="8">
+			        
+			        	<h:outputLabel for="name" value="Select Status:" />
+			        	<p:selectOneMenu value="#{payerController.payer.par}" style="width:175px">
 				            <f:selectItem itemLabel="PAR" itemValue="PAR" />
 				            <f:selectItem itemLabel="Non-Par" itemValue="Non-Par" />
-				        </p:selectOneMenu>
-			               
-			            <p:selectOneMenu value="#{payerController.payer.appPackageComplete}" style="width:175px">
 				            <f:selectItem itemLabel="Application Package Complete" itemValue="Application Package Complete" />
 				            <f:selectItem itemLabel="Application Filed" itemValue="Application Filed" />
-				        </p:selectOneMenu>
-				        
-				        <p:selectOneMenu value="#{payerController.payer.appAccepted}" style="width:175px">
 				            <f:selectItem itemLabel="Application Accepted" itemValue="Application Accepted" />
 				            <f:selectItem itemLabel="Application Rejected" itemValue="Application Rejected" />
-				        </p:selectOneMenu>
-				        
-				        <p:selectOneMenu value="#{payerController.payer.effectiveDateAssigned}" style="width:175px">
 				            <f:selectItem itemLabel="Effective Date Assigned" itemValue="Effective Date Assigned" />
 				            <f:selectItem itemLabel="Letter Received" itemValue="Letter Received" />
 				        </p:selectOneMenu>
 			        
-			        </h:panelGrid>   
+			        </h:panelGrid>
 			        
 			        
 
