--- a/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
@@ -19,7 +19,7 @@
 
 				<h:form>
 					
-					<h:panelGrid columns="5" cellpadding="0">  
+					<h:panelGrid columns="7" cellpadding="0">  
 					
 						<p:outputLabel for="idProviders" value="Select Provider: " />
 						<p:selectOneMenu id="idProviders" value="#{reportsController.currentProvider}"
@@ -37,7 +37,7 @@
 							</p:selectOneMenu>
 							
 							
-						<p:outputLabel for="idPayers" value="Select Payer: " />
+						<h:outputLabel value="Select Payer: " />
 						<p:selectCheckboxMenu id="idPayers" value="#{reportsController.payerProvider}" label="Select Payers"
 				            filter="true" filterMatchMode="startsWith" style="width:177px"  var="t"
 				            converter="payerConverter" panelStyle="width:250px">
@@ -50,6 +50,18 @@
 							</p:column>
 				            
 				        </p:selectCheckboxMenu>
+				        
+				        <h:outputLabel for="status" value="Select Status:" />
+			        	<p:selectOneMenu value="#{reportsController.currentPayerStatus}" style="width:175px">
+				            <f:selectItem itemLabel="PAR" itemValue="PAR" />
+				            <f:selectItem itemLabel="Non-Par" itemValue="Non-Par" />
+				            <f:selectItem itemLabel="Application Package Complete" itemValue="Application Package Complete" />
+				            <f:selectItem itemLabel="Application Filed" itemValue="Application Filed" />
+				            <f:selectItem itemLabel="Application Accepted" itemValue="Application Accepted" />
+				            <f:selectItem itemLabel="Application Rejected" itemValue="Application Rejected" />
+				            <f:selectItem itemLabel="Effective Date Assigned" itemValue="Effective Date Assigned" />
+				            <f:selectItem itemLabel="Letter Received" itemValue="Letter Received" />
+				        </p:selectOneMenu>
 					
 						<p:commandButton value="Search" update=":frmMain"
 							action="#{reportsController.getPayerData()}" />
