--- a/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
@@ -21,13 +21,14 @@
 					
 					<h:panelGrid columns="7" cellpadding="0">  
 					
-						<p:outputLabel for="idProviders" value="Select Provider: " />
+						<!-- <p:outputLabel for="idProviders" value="Select Provider: " /> -->
 						<p:selectOneMenu id="idProviders" value="#{reportsController.currentProvider}"
 								panelStyle="width:180px" effect="fade" converter="providerConverter"
 								var="t" style="width:177px">
 								
 								<p:ajax event="change" listener="#{reportsController.onEntityChange}" update="idPayers" />
 								
+								<f:selectItem itemLabel="Select Provider" />
 								<f:selectItems value="#{reportsController.providerList}" var="entity"
 									itemLabel="#{entity.name}" itemValue="#{entity}"  />
 	
@@ -37,7 +38,7 @@
 							</p:selectOneMenu>
 							
 							
-						<h:outputLabel value="Select Payer: " />
+						<!-- <h:outputLabel value="Select Payer: " /> -->
 						<p:selectCheckboxMenu id="idPayers" value="#{reportsController.payerProvider}" label="Select Payers"
 				            filter="true" filterMatchMode="startsWith" style="width:177px"  var="t"
 				            converter="payerConverter" panelStyle="width:250px">
@@ -51,8 +52,9 @@
 				            
 				        </p:selectCheckboxMenu>
 				        
-				        <h:outputLabel for="status" value="Select Status:" />
+				        <!-- <h:outputLabel for="status" value="Select Status:" /> -->
 			        	<p:selectOneMenu value="#{reportsController.currentPayerStatus}" style="width:175px">
+			        		<f:selectItem itemLabel="Select Status" />
 				            <f:selectItem itemLabel="PAR" itemValue="PAR" />
 				            <f:selectItem itemLabel="Non-Par" itemValue="Non-Par" />
 				            <f:selectItem itemLabel="Application Package Complete" itemValue="Application Package Complete" />
