--- a/src/main/webapp/Views/Unsecured/Login/index.xhtml
+++ b/src/main/webapp/Views/Unsecured/Login/index.xhtml
@@ -2,11 +2,26 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
+
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+	<style>
+		.custom {
+    		width: 285px !important;
+		}
+
+		
+	</style>
+
 </h:head>
 
 <h:body>
 
-	<h:form id="loginForm">
+	<!-- <h:form id="loginForm">
 	<p:messages />
 		<p:focus />
 		<p:panelGrid columns="2">
@@ -18,7 +33,36 @@
 		</p:panelGrid>
 		<p:commandButton value="save" action="#{loginController.loginPressed()}"
 		 />
-	</h:form>
+	</h:form> -->
+
+	<div class="container">
+	
+		<div class="col-md-10 col-md-offset-4">
+			<h:form class="form-signin">
+		        <h2 class="form-signin-heading">Please sign in</h2>
+		        
+		        <div class="row">
+		            <div class="form-group col-lg-4">
+		            	<label for="inputEmail" class="sr-only">Email address</label>
+		        		<p:inputText value="#{loginController.userName}" class="form-control" placeholder="Username" />
+		            </div>
+		        </div>
+		        
+		        <div class="row">
+		            <div class="form-group col-lg-4">
+		            	<label  for="inputPassword" class="sr-only">Password</label>
+		        		<p:password id="inputPassword" class="form-control" placeholder="Password"
+		        			value="#{loginController.password}" required="true" />
+		            </div>
+		        </div>
+		        
+		        <p:commandButton value="Sign in" action="#{loginController.loginPressed()}"
+		        	class="btn btn-default btn-primary custom" />
+		      </h:form>
+	      
+	      </div>
+	      
+      </div>
 
 	<!-- <h1>#{loginController.getName()}</h1> -->
 
