--- a/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
+++ b/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
@@ -104,7 +104,7 @@
 						</p:selectOneMenu>
 						
 						
-						<p:selectCheckboxMenu id="myPractices" value="#{providerController.provider.practiceList}" label="Select Practices"
+						<p:selectCheckboxMenu id="myPractices" value="#{providerController.selectedPractices}" label="Select Practices"
 				            filter="true" filterMatchMode="startsWith" style="width:177px" var="t"
 				            converter="practiseConverter" panelStyle="width:250px">
 				            
